--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "NodeTodo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +14,8 @@
     "method-override": "^2.3.2",
     "mongoose": "^4.0.1",
     "morgan": "^1.5.2"
+  },
+  "engines" : {
+    "node" : "0.10.33"
   }
 }
